[TIP-666-extra] Fix completeness spacings

--- a/src/Pim/Bundle/UIBundle/Resources/public/less/base/general.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/base/general.less
@@ -15,6 +15,7 @@
 }
 
 * {
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
