--- a/src/Pim/Bundle/UIBundle/Resources/public/less/components/product-edit-form/CompletenessBlock.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/components/product-edit-form/CompletenessBlock.less
@@ -43,11 +43,14 @@
   }
 
   &-channel {
-    border-bottom: 1px solid @AknBorderColor;
     display: flex;
     flex-direction: column;
-    padding-bottom: 2px;
-    margin-bottom: 2px;
+
+    & + & {
+      border-top: 1px solid @AknBorderColor;
+      padding-top: 10px;
+      margin-top: 10px;
+    }
   }
 
   &-channelTitle {
